# snp_stitch

./: .gitignore  README.md  pyproject.toml
snp_stitch/: __main__.py  model_training_functions.py
snp_stitch/models/: ref_base_encoder.pkl  tnc_encoder.pkl
